# kivy-viewer

./: README.md  main.py  pyproject.toml  reloader.kv
